--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h2>CSS</h2>
     <p>Cascading Style Sheets (em português, Folha de estilo em Cascata) estiliza a sua página web</p>
-    <img src="TECNOLOGIA/Olá Mundo.png" alt" Imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas"
+    <img src="Olá Mundo.png" alt" Imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas">
   </section>
 
   <footer>
