--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world</title>
     <link rel="stylesheet" href="style.css">
+    
 
 </head>
 <body>
@@ -27,6 +28,6 @@
 
     <p>Uma página desenvolvida por Alura Start</p>
   </footer>
-
+  <script src="main.js"></script>
   </body>
 </html>
